Update gradle build scripts for `marking` subproject (temp)